[gd_scene load_steps=3 format=3 uid="uid://bcvj1casdhw35"]

[ext_resource type="Script" uid="uid://bhjj46g56f4vm" path="res://scripts/ProductionManager.gd" id="1"]
[ext_resource type="Script" uid="uid://dh82b1oovpnjp" path="res://scripts/Slot.gd" id="2"]

[node name="ProductionPanel" type="Panel"]
self_modulate = Color(0.6, 0.45, 0.05, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="IngredientRow" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 0
anchor_right = 1.0
alignment = 1

[node name="WorkGrid" type="GridContainer" parent="."]
layout_mode = 0
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.75
columns = 4

[node name="SlotTemplate" type="Panel" parent="WorkGrid"]
visible = false
self_modulate = Color(0.35, 0.25, 0, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="ToolRow" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
